welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value vuBiscuit
    if (estSurBiscuit){vuBiscuit=true}
                       ^Program:7: error: not found: value vuBiscuit
  return vuBiscuit
         ^