welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (pas<-1 to 7){
    avance()
    if (estSurBiscuit){vuBiscuit=true}
  }
  recule(6)
  return vuBiscuit
}